# fractured-ray

./: Cargo.toml  README.md
.github/workflows/: ci.yml
assets/models/teapot/: teapot.mtl
docs/: configuration_format.md  implementation_summary.md
examples/: config_test.rs  config_validation.rs  cornell_box.rs  diamond.rs  teapot.rs
examples/configs/: README.md  cornell_box.toml  simple_scene.toml  teapot.toml
src/: main.rs
src/domain/: mod.rs
src/domain/camera/: camera.rs  mod.rs  resolution.rs  viewport.rs
src/domain/color/: albedo.rs  color.rs  external_color.rs  mod.rs  spectrum.rs
src/domain/color/core/: albedo.rs  def.rs  mod.rs  spectrum.rs
src/domain/color/map/: def.rs  gradient.rs  grayscale.rs  mod.rs  palette.rs
src/domain/entity/: bvh.rs  entity.rs  scene.rs
src/domain/image/: array.rs  image.rs  mod.rs
src/domain/image/core/: image.rs  mod.rs
src/domain/material/: mod.rs
src/domain/material/def/: bsdf_ext.rs  bssrdf_ext.rs  dispatch.rs  ext.rs  material.rs  mod.rs
src/domain/math/: mod.rs
src/domain/ray/: intersection.rs  mod.rs  ray.rs
src/domain/ray/event/: mod.rs  (+3 more)
src/domain/renderer/: context.rs  core.rs  def.rs  mod.rs  state.rs
src/domain/sampling/: def.rs  mod.rs
src/domain/scene/: bvh.rs  mod.rs
src/domain/shape/: mod.rs
src/domain/texture/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/description/: def.rs  error.rs  loader.rs  mod.rs
src/infrastructure/image/: mod.rs  png.rs  png_writer.rs  ppm.rs  ppm_writer.rs  registry.rs
src/infrastructure/model/: def.rs  mod.rs  obj.rs  obj_material.rs
(+129 files in other folders)
